# GameGuard-public

./: .env.example  .gitignore  DEMO.md  EVAL.md  LICENSE  MODEL_COMPARISON.md  Makefile  README.md  README_en.md  Technical Guide.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: agent_pipeline.drawio  architecture.drawio  bug_invariant_matrix.drawio  dev-log.md  example_skill_v1.md  harbor_quest_dag.drawio  prompt-engineering.md  stage6-unity-mock-plan.md  unity_integration.md
docs/archive/: README-v1.md  README-v2.md
evals/: README.md  agent-eval-details.md  common.py  compare_models.py  rollup.py
evals/compare_models/: results.md
evals/critic/: eval_critic.py  results.md
evals/design_doc/: eval_design_doc.py  golden_advanced_skill_v2.yaml  golden_invariants.yaml  results.md
evals/test_gen/: eval_test_gen.py  results.md
evals/triage/: eval_triage.py  results.md
gameguard/: cli.py
gameguard/agents/: base.py  critic.py  design_doc.py  exploratory.py  orchestrator.py  test_gen.py  triage.py
gameguard/domain/: __init__.py  action.py  buff.py  character.py  dialogue.py  entity.py  event.py  geom.py  invariant.py  quest.py  scene.py  skill.py
gameguard/llm/: __init__.py  cache.py  client.py  trace.py
gameguard/reports/: __init__.py  html.py  markdown.py  regress.py  schema.py
gameguard/sandbox/: adapter.py  base.py
gameguard/testcase/: __init__.py  loader.py  model.py  runner.py
gameguard/tools/: __init__.py  critic_tools.py  doc_tools.py  schemas.py  testgen_tools.py  triage_tools.py
scripts/: gen_unity_proto.sh
testcases/quest_system/: harbor_handwritten.yaml
testcases/skill_system/: agent_generated.yaml  (+1 more)
tests/: test_agent_layer.py  test_critic.py  test_design_doc_eval.py  test_invariant_dot_replay.py  test_property_v1.py  test_pysim_v1.py  test_pysim_v2_bugs.py  test_questsim_d12.py  test_questsim_d13.py  test_questsim_d14.py  test_questsim_d15.py  test_questsim_d16.py  test_questsim_d17.py  test_regress.py  test_testcase_layer.py  test_triage.py  test_unity_adapter.py  test_unity_e2e.py
(+32 files in other folders)
